Adding new features

--- a/src/styles/_fifthSection.scss
+++ b/src/styles/_fifthSection.scss
@@ -1,5 +1,6 @@
 .fifth-section{
-    height:60vh;
+    height: 100%;
+    flex: 1;
     background-color: $blue;
     display: flex;
     justify-content: center;
