--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,53 +1,95 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    //background-color: black;
-    color: $light-white;
-    font-family: 'Metropolis';
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: $light-white;
+  font-family: "Metropolis";
 }
 
-span{
-    font-size: 16px;
-    font-family: 'Gotham Rounded';
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: 100;
-    @media(max-width:1440px){
-        font-size: 12px;
-    }
-    @media(max-width:500px){
-        font-size: 9px;
-    }
+span {
+  font-size: 16px;
+  font-family: "Gotham Rounded";
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  font-weight: 100;
+  @media (max-width: 1440px) {
+    font-size: 12px;
+  }
+  @media (max-width: 500px) {
+    font-size: 9px;
+  }
 }
 
-a{
-    text-decoration: none;
-    transition: 300ms ease-in-out;
-    &:hover{
-        opacity: 0.8;
-    }
+a {
+  text-decoration: none;
+  transition: 300ms ease-in-out;
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
-h3{
-    font-size: 120px;
-    font-weight: 400;
-    text-transform: uppercase;
-    @media(max-width:1440px){
-        font-size: 100px;
-    }
-    @media(max-width:500px){
-        font-size: 52px;
-    }
+h3 {
+  font-size: 120px;
+  font-weight: 400;
+  text-transform: uppercase;
+  @media (max-width: 1440px) {
+    font-size: 100px;
+  }
+  @media (max-width: 1024px) {
+    font-size: 70px;
+  }
+  @media (max-width: 500px) {
+    font-size: 52px;
+  }
 }
 
-p{
-    font-size: 18px;
-    line-height: 1.7rem;
-    @media(max-width:1440px){
-        font-size: 14px;
-    }
-    @media(max-width:500px){
-        font-size: 12px;
-    }
+p {
+  font-size: 18px;
+  line-height: 1.7rem;
+  @media (max-width: 1440px) {
+    font-size: 14px;
+  }
+  @media (max-width: 500px) {
+    font-size: 12px;
+  }
+}
+
+button {
+  border-radius: 40px;
+  border: none;
+  padding: 10px;
+  color: $light-white;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+video {
+  object-fit: cover;
+}
+
+section {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  position: fixed;
+  visibility: hidden;
+
+  .outer,
+  .inner {
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+  }
+
+  .bg {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    background-size: cover;
+    background-position: center;
+  }
 }
