--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -18,6 +18,10 @@ nav{
       align-items: center;
       padding: 35px 60px;
       
+
+      @media(max-width:500px){
+        padding: 35px 30px;
+      }
     }
     
     transition: all 300ms ease-in-out;
@@ -92,6 +96,15 @@ nav{
       text-transform: uppercase;
       font-size: 120px;
       padding: 30px 60px;
+
+      @media(max-width:1400px){
+        font-size: 100px;
+      }
+
+      @media(max-width:500px){
+        font-size: 60px;
+        padding: 30px;
+      }
     }
   }
 
@@ -100,9 +113,16 @@ nav{
     justify-content: flex-end;
     align-items: center;
     margin-bottom: 20px;
+    @media(max-width:500px){
+      justify-content: space-around;
+      margin-bottom: 40px;
+    }
     span{
-      font-size: 11px !important;
+      //font-size: 11px !important;
       margin-right: 50px;
+      @media(max-width:500px){
+        margin-right: 0px;
+      }
     }
   }
   
@@ -118,8 +138,4 @@ nav{
     max-width: 100%;
     height: auto;
     width: auto\9; /* ie8 */
-}
-
-video{
-    object-fit: cover;
 }
