--- a/src/styles/_secondScreen.scss
+++ b/src/styles/_secondScreen.scss
@@ -13,10 +13,24 @@
         
         .second-screen-title{
             padding-left:60px ;
-            border: 1px solid white;
             flex: 1;
             h3{
                 white-space: pre;
+            }
+        }
+    }
+    .second-screen-items{
+        .second-screen-item{
+            display: flex;
+            align-items: center;
+            padding: 5px 0px;
+            border-top: 1px solid #F4EDDC;
+            border-bottom: 1px solid #F4EDDC;
+            font-size: 18px;
+            button{
+                border-radius: 40px;
+                border: none;
+                padding: 10px;
             }
         }
     }
