--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -19,8 +19,14 @@ nav{
       padding: 35px 60px;
       
 
+      svg{
+        @media(max-width:500px){
+          width: 100px;
+        }
+      }
+
       @media(max-width:500px){
-        padding: 35px 30px;
+        padding: 15px 10px;
       }
     }
     
