--- a/src/styles/_thirdScreen.scss
+++ b/src/styles/_thirdScreen.scss
@@ -4,56 +4,71 @@
   display: flex;
   align-items: center;
 
-  @media(max-width:500px){
-    flex-direction:column-reverse;
+  @media (max-width: 900px) {
+    flex-direction: column-reverse;
     justify-content: space-between;
   }
 
-  .image-wrapper{
-    img{
+  .image-wrapper {
+    @media(max-width:900px){
+      width: 100%;
+    }
+    img {
       width: 100%;
       height: 100%;
     }
     .image-desktop {
       width: 800px;
-  
+
       @media (max-width: 1600px) {
         width: 500px;
       }
-  
+
       @media (max-width: 1024px) {
         width: 400px;
       }
-  
-      @media(max-width:500px){
+
+      @media (max-width: 500px) {
         display: none;
       }
     }
-    .image-responsive{
+    .image-responsive {
       display: none;
-      @media(max-width:500px){
+      @media (max-width: 500px) {
         display: block;
       }
     }
-    
   }
-  
 
   .info {
     margin-left: 100px;
-  
+    &-text {
+      @media (max-width: 900px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+      }
+    }
     @media (max-width: 1400px) {
       margin-left: 20px;
     }
 
-    @media(max-width:500px){
+    @media(max-width:900px){
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-right: 20px;
+
+    }
+
+    @media (max-width: 500px) {
       flex: 1;
       text-align: center;
       margin-left: 0px;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      margin-bottom: 40px;
     }
     span {
       color: $green;
@@ -62,7 +77,7 @@
       white-space: pre;
       color: $green;
 
-      @media(max-width:500px){
+      @media (max-width: 500px) {
         font-size: 40px;
       }
     }
@@ -70,7 +85,10 @@
       display: flex;
       align-items: center;
       margin-top: 50px;
-      @media(max-width:500px){
+      @media (max-width: 900px) {
+        justify-content: flex-end;
+      }
+      @media (max-width: 500px) {
         flex-direction: column-reverse;
         margin-top: 20px;
       }
@@ -81,7 +99,7 @@
         @media (max-width: 1024px) {
           font-size: 14px;
         }
-        @media(max-width:500px){
+        @media (max-width: 500px) {
           width: auto;
           font-size: 10px;
         }
@@ -96,7 +114,7 @@
         font-size: 18px;
         background: #e44a3d;
 
-        @media(max-width:500px){
+        @media (max-width: 500px) {
           font-size: 14px;
           height: 40px;
           margin: 15px 0px 10px 0px;
