--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,8 @@
 @import 'navbar';
 @import 'fifthSection';
 @import 'secondScreen';
+@import 'firstScreen';
 @import 'footer';
 @import 'thirdScreen';
 @import 'fourthScreen';
+@import 'sixthScreen';
