--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,13 +7,13 @@
 }
 
 span {
-  font-size: 16px;
+  font-size: 14px;
   font-family: "Gotham Rounded";
   text-transform: uppercase;
   letter-spacing: 0.2em;
   font-weight: 100;
   @media (max-width: 1440px) {
-    font-size: 12px;
+    font-size: 11px;
   }
   @media (max-width: 500px) {
     font-size: 9px;
@@ -33,13 +33,13 @@ h3 {
   font-weight: 400;
   text-transform: uppercase;
   @media (max-width: 1440px) {
-    font-size: 100px;
-  }
-  @media (max-width: 1024px) {
     font-size: 70px;
   }
+  @media (max-width: 1024px) {
+    font-size: 50px;
+  }
   @media (max-width: 500px) {
-    font-size: 52px;
+    font-size: 42px;
   }
 }
 
@@ -91,5 +91,19 @@ section {
     top: 0;
     background-size: cover;
     background-position: center;
+  }
+}
+
+.dots-container{
+  z-index: 99999;
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+
+  svg{
+    cursor: pointer;
   }
 }
