--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -102,7 +102,7 @@ nav{
       text-transform: uppercase;
       font-size: 120px;
       padding: 30px 60px;
-
+      cursor: pointer;
       @media(max-width:1400px){
         font-size: 100px;
       }
