--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -107,3 +107,21 @@ section {
     cursor: pointer;
   }
 }
+
+.button-left{
+  transition: 300ms ease-in-out;
+  transform: rotate(-5deg) !important;
+  &:hover{
+    opacity: 0.8;
+    transform: rotate(5deg) !important;
+  }
+}
+
+.button-right{
+  transition: 300ms ease-in-out;
+  transform: rotate(5deg) !important;
+  &:hover{
+    opacity: 0.8;
+    transform: rotate(-5deg) !important;
+  }
+}
