--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -137,3 +137,11 @@ section {
   border-radius: 20px;
   letter-spacing: 0.2em;
 }
+
+.preview{
+  position: absolute;
+  bottom: 0;
+  height: 3%;
+  width: 100%;
+
+}
