--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,6 +5,9 @@
     //padding: 60px 235px;
     background-color: $brown;
 
+    @media(max-width:1440px){
+        min-height: auto;
+    }
     &-group-container{
         display: flex;
         justify-content: space-around;
@@ -14,8 +17,11 @@
     &-group{
 
         &-title{
-            margin-bottom: 40px;
-            
+            margin-bottom: 25px;
+            span{
+                font-size: 14px;
+
+            }
         }
 
         &-item{
@@ -24,7 +30,9 @@
             margin-bottom: 20px;
             span{
                 font-size: 12px;
-
+                @media(max-width:1440px){
+                    font-size: 10px;
+                }
                 @media(max-width:500px){
                     font-size: 7px;
                 }
@@ -40,10 +48,10 @@
     }
 
     &-copy{
-        height: 100px;
         display: flex;
         align-items: center;
         justify-content: space-around;
+        padding:10px 0px;
         border-top: 1px solid #EFEDEA;
 
         @media(max-width:500px){
