--- a/src/styles/_fourthScreen.scss
+++ b/src/styles/_fourthScreen.scss
@@ -28,7 +28,9 @@
         align-items: center;
         padding: 50px 0px;
         border-bottom: 1px solid $light-white;
-
+        @media(max-width:1440px){
+            padding: 25px 0px;
+        }
         @media(max-width:500px){
             justify-content: center;
             text-align: center;
@@ -67,7 +69,7 @@
             margin-top: 20px;
 
             @media(max-width:1440px){
-                font-size: 50px;
+                font-size: 80px;
             }
 
             @media(max-width:1024px){
