--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -81,6 +81,22 @@ nav{
   justify-content: center;
   z-index: 99;
   transition: 500ms ease-in-out;
+
+  .contact-ul{
+
+    
+
+    :last-child{
+      border-top:none;
+    }
+  }
+
+  .home-ul{
+
+    :nth-child(2n){
+      border:none;
+    }
+  }
   ul{
     width: 100%;
     height: 100%;
@@ -88,23 +104,57 @@ nav{
     flex-direction: column;
     justify-content: center;
 
-    :first-child{
-      border-bottom: none !important;
-    }
 
-    :last-child{
-      border-top: none !important;
-    }
+
     .navbar-items{
       width: 100%;
       border-bottom: 1px solid #F4EDDC;
       border-top: 1px solid #F4EDDC;
       text-transform: uppercase;
-      font-size: 120px;
       padding: 30px 60px;
       cursor: pointer;
+      font-size: 120px;
+      a{
+        width:100%;
+        display:block;
+      }
+      .navbar-item-container{
+        position:relative;
+        display:inline;
+      }
+
+      p{
+        display:inline;
+        text-transform: uppercase;
+        font-size: 120px;
+        @media(max-width:1400px){
+          font-size: 90px;
+        }
+        @media(max-width:500px){
+          font-size: 60px;
+        }
+        //padding: 30px 60px;
+      }
+      &:hover .navbar-item-hover {
+        display:block;
+      }
+
+      .navbar-item-hover{
+        position:absolute;
+        left:50%;
+        top:50%;
+        display:none;
+        transform: translate(-50%, -70%);
+
+        button{
+          background:#e44a3d;
+          text-transform: uppercase;
+
+        }
+      }
       @media(max-width:1400px){
-        font-size: 100px;
+        font-size: 90px;
+        padding:15px 30px;
       }
 
       @media(max-width:500px){
